# FastAPI-test

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
commands/: create_test_provider.py  init_db.py  start_providers_event_sync.py
event_provider/: database.py  dependencies.py  logger.py  main.py  models.py  schemas.py  settings.py  tasks.py
event_provider/api/: common.py  events.py
event_provider/event_sync/: sync_data.py
event_provider/services/: events.py  fetch_provider_events.py  sync_provider_events.py
settings/envs/: .env-common  .env-test
tests/: conftest.py
tests/servicers/: conftest.py  test_provider_base_events.py  test_provider_event.py  test_providers.py  test_sync_provider_events.py
tests/utils/: provider_events_example.xml
