[tool.isort]
profile = "black"
line_length = 120
skip_glob = "^(event_provider|tests)"

[tool.black]
line-length = 120

[tool.pylint.messages_control]
max-line-length = 120
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "invalid-name"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.poetry]
name = "event-provider"
version = "0.0.1"
description = "Event Provider Service"
authors = ["Ale Devalis <alejandrodevalis@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiosqlite = "0.20.0"
arrow = "1.3.0"
asyncpg = "0.29.0"
click = "8.1.7"
coloredlogs = "15.0.1"
fastapi = "0.110.1"
httpx = "0.27.0"
lxml = "5.2.1"
lxml-stubs = "0.5.1"
psycopg2 = "2.9.9"
pydantic = "2.6.4"
pydantic-settings = "2.2.1"
sqlalchemy = "2.0.29"
uvicorn = "0.29.0"


[tool.poetry.group.dev.dependencies]
black = "24.3.0"
isort = "5.13.2"
ipdb = "0.13.13"
ipython = "8.23.0"
mypy = "1.9.0"
mypy-extensions = "1.0.0"
pre-commit = "3.7.0"
pylint = "2.12.2"
pytest = "8.1.1"
pytest-asyncio = "0.23.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
